set status for exception